# advent-of-code-2023

day1/: Cargo.toml
day1/src/: lib.rs
day2/: Cargo.toml
day2/src/: lib.rs
day2/src/inputs/: part1.txt
day3/: Cargo.toml
day3/src/: lib.rs
day4/: Cargo.toml
day4/src/: lib.rs
