[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "part1"
path = "src/bin/part1.rs"

[[bin]]
name = "part2"
path = "src/bin/part2.rs"